infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: healthcare-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: api.healthcare.com
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5050
    - host: booking.healthcare.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: booking-portal-service
                port:
                  number: 8080
